[tool.poetry]
name = "pydantic_sqlite"
version = "0.4.0"
description = "Simple package for storing pydantic BaseModels in an in-memory SQLite database."
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Phil997/pydantic-sqlite"
keywords = ["pydantic", "sqlite-utils", "sqlite3"]
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.8.1"
pydantic = "^2.1.0"
sqlite-utils = "^3.19"

[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
flake8 = "^7.0.0"
pytest = "^8.1.1"
hypothesis = "^6.100.0"
testfixtures = "^8.1.0"
pytest-cov = "<=6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
