[project]
name = "pydantic_sqlite"
version = "0.5.0"
description = "Simple package for storing pydantic BaseModels in an in-memory SQLite database."
authors = [{ name = "Philipp Jaschke" }]
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }
keywords = [
    "pydantic",
    "sqlite-utils",
    "sqlite3",
]
dependencies = [
    "pydantic (>=2.1.0)",
    "sqlite-utils (>=3.19)",
]

[project.urls]
Repository = "https://github.com/Phil997/pydantic-sqlite"

[tool.hatch.build.targets.sdist]
include = ["LICENSE"]

[tool.hatch.build.targets.wheel]
include = ["LICENSE"]

[dependency-groups]
dev = [
    "isort (>=5.13.2)",
    "flake8 (>=7.0.0)",
    "pytest (>=8.1.1)",
    "hypothesis (>=6.100.0)",
    "testfixtures (>=8.1.0)",
    "pytest-cov (<=6)"
,
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
